--- a/demo/package.json
+++ b/demo/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "axios": "^0.16.2",
     "vue": "^2.3.3",
-    "vue-router": "^2.6.0"
+    "vue-router": "^2.6.0",
+    "vue2-filters": "^0.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
