--- a/demo/package.json
+++ b/demo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cinema-paradiso-codenares",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Demo de Vue para la charla de Codenares",
   "author": "jdonsan",
   "private": true,
@@ -16,8 +16,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "vue": "^2.3.3",
-    "vue-router": "^2.6.0",
-    "vue2-filters": "^0.2.0"
+    "vue-router": "^2.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
